# python-take-home

./: .gitignore  bootstrap.sh  environments.yaml  pyproject.toml
question1/: DECISIONS.md  README.md  __main__.py  config.py  manifest.py
question1/examples/: production.yaml  staging.yaml
question1/sources/: base.py  env.py  vault.py  yaml_source.py
question1/tests/: test_sources.py
question2/: DECISIONS.md  README.md  __main__.py  executor.py  queue_executor.py
question2/prev_solution/: __main__ copy.py  executor.old.py  queue_executor.old.py
question2/tests/: test_queue.py
